--- a/express/public/style.css
+++ b/express/public/style.css
@@ -67,3 +67,30 @@
       background-color: #f9f9f9;
     }
   }
+
+  .bulletsCounter{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 200px;
+    height: 20px;
+    padding: 5px;
+    background: #ddd;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    position: relative;
+  }
+
+  .healthCounter{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 200px;
+    height: 20px;
+    padding: 5px;
+    background: #ddd;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    position: relative;
+  }
+
