--- a/so-resto-nois-front/src/Styles/GameScreen.css
+++ b/so-resto-nois-front/src/Styles/GameScreen.css
@@ -21,24 +21,30 @@ section > img{
 
 .GameText{
     width: 300px;
+    height: 600px;
     text-align: justify;
     
 }
 
 .GameImage{
     width: 300px;
+    height: 600px;
     display: flex;
     
 }
 
 .GameChoices{
     width: 300px;
+    height: 600px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
 
 }
 
 .GameInformation{
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
