--- a/so-resto-nois-front/src/index.css
+++ b/so-resto-nois-front/src/index.css
@@ -67,3 +67,38 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+.health-bar{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 200px;
+  height: 20px;
+  padding: 5px;
+  background: #ddd;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.bar{
+  background: #c54;
+  width: 100%;
+  height: 10px;
+  position: relative;
+
+  transition: width .5s linear;
+}
+
+.hit{
+  background: #f00;
+  width: 0%;
+  height: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transition: width .5s linear;
+}
