--- a/express/public/Styles/menu.css
+++ b/express/public/Styles/menu.css
@@ -84,10 +84,7 @@ section{
 .userAchievements{
     width: 620px;
     height: 520px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    text-align: center;
     overflow: hidden;
     overflow-y: scroll;
 }
